--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,3 +43,50 @@ a:visited {
     color: rgb(50, 52, 54);
     border-radius: 50px;
 }
+
+
+
+
+@media only screen and (max-width: 600px) 
+{
+    .hide {
+        display: none;
+    }
+    .hide1 {
+        display: none;
+    }
+    
+    .carousel-item {
+        height: 40px;
+    }
+    .carousel{
+        height: 40px;
+    }
+}
+
+
+
+
+@media only screen and (max-width: 992px) {
+
+    .hide1 {
+        display: none;
+
+    }
+    .carousel-item {
+        height: 40px;
+    }
+
+    .carousel{
+        height: 40px;
+    }
+} 
+
+
+.carousel {
+    height: 600px;
+}
+.carousel-item {
+    height: 600px;
+}
+
